--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -9,12 +9,12 @@
     <form th:action="@{/user/edit}" th:method="post" th:object="${newUser}">
         <div class="mb-3">
 
-
+            <a class="form-control" type="text" name="id"></a>
             <label class="form-label">名前</label>
-            <input class="form-control" type="text" name="username" />
+            <input class="form-control" type="text" name="username">
 
             <label class="control-label">年齢</label>
-            <input class="form-control" type="text" name="password" />
+            <input class="form-control" type="text" name="password">
         </div>
 
 
