--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
     </div>
     <div class="mt-3">
         <label>パスワード</label>
-        <input type="password" name="password" class="form-control" />
+        <input type="text" name="password" class="form-control" />
     </div>
     <div class="mt-3">
         <button type="submit" class="btn btn-primary" href="user/list">ログイン</button>
