--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,19 +7,18 @@
 </head>
 <body>
 <h1 class="mt-3">テストアプリケーション</h1>
-<form th:action="@{/list}" method="post">
+<form th:action="@{/login}" method="post">
     <div class="mt-3">
         <label >ユーザー名</label>
-        <input type="text" class="form-control" name="username"/>
+        <input type="text" class="form-control" id="username" name="username"/>
     </div>
     <div class="mt-3">
         <label>パスワード</label>
-        <input type="text" class="form-control" name="password"/>
+        <input type="text" class="form-control" id="password" name="password"/>
     </div>
     <div class="mt-3">
-        <button type="submit" class="btn btn-primary" href="user/list">ログイン</button>
+        <button type="submit" class="btn btn-primary" href="signIn">ログイン</button>
     </div>
-    <input type="submit" value="認証" />
 </form>
 <li>
     <a href="@{/user/list}">一覧</a>
