--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -9,18 +9,26 @@
 <body>
 <div class="container">
     <h1>UserHome</h1>
-    <div th:object="${user}">
+    <div th:object="${product}">
         <div class="form-row">
-            <label class="control-label">ID: </label>
+            <label class="control-label">ID</label>
             <p class="form-control" th:text="*{id}"></p>
         </div>
         <div class="form-row">
-            <label class="control-label">名前</label>
-            <p class="form-control" th:text="*{username}"></p>
+            <label class="control-label">品番</label>
+            <p class="form-control" th:text="*{p_number}"></p>
         </div>
         <div class="form-row">
-            <label class="control-label">年齢</label>
-            <p class="form-control" th:text="*{password}"></p>
+            <label class="control-label">製品名</label>
+            <p class="form-control" th:text="*{product}"></p>
+        </div>
+        <div class="form-row">
+            <label class="control-label">カテゴリ</label>
+            <p class="form-control" th:text="*{category}"></p>
+        </div>
+        <div class="form-row">
+            <label class="control-label">価格</label>
+            <p class="form-control" th:text="*{price}"></p>
         </div>
         <a class="btn btn-outline-success btn-sm" th:href="@{/user/update/{id}(id=*{id})}">編集</a>
         <a class="btn btn-outline-success btn-sm" th:href="@{/user/deletePause/{id}(id=*{id})}">削除</a>
