--- a/src/main/resources/templates/security/login.html
+++ b/src/main/resources/templates/security/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1 class="mt-3">テストアプリケーション</h1>
-<form th:action="@{/login}" method="post">
+<form th:action="@{/security/login}" method="post">
     <div class="mt-3">
         <label >ユーザー名</label>
         <input type="text" class="form-control" id="username" name="username"/>
@@ -17,7 +17,7 @@
         <input type="text" class="form-control" id="password" name="password"/>
     </div>
     <div class="mt-3">
-        <button type="submit" class="btn btn-primary" href="signIn">ログイン</button>
+        <button type="submit" class="btn btn-primary" href="/security/signIn">ログイン</button>
     </div>
 </form>
 <li>
