--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -34,7 +34,7 @@
     <div class="list">
     <tr class="product" th:each="product : ${list}" th:method="post">
 
-        <th th:text="${product.productId}"></th>
+        <th th:text="${product.id}"></th>
 
         <th th:text="${product.pNumber}"></th>
 
