--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -34,19 +34,21 @@
     <div class="list">
     <tr class="product" th:each="product : ${list}" th:method="post">
 
-        <th th:text="${product.id}"></th>
+<!--        <th th:text="${product.id}"></th>-->
 
-        <th th:text="${product.pNumber}"></th>
+<!--        <th th:text="${product.pNumber}"></th>-->
 
-        <th th:text="${product.product}"></th>
+<!--        <th th:text="${product.product}"></th>-->
 
-        <th th:text="${product.category}"></th>
+<!--        <th th:text="${product.category}"></th>-->
 
-        <th th:text="${product.price}"></th>
+<!--        <th th:text="${product.price}"></th>-->
 
-        <th th:text="${product.registrationDate}"></th>
+<!--        <th th:text="${product.registrationDate}"></th>-->
 
-        <th th:text="${product.deletedDate}"></th>
+<!--        <th th:text="${product.deletedDate}"></th>-->
+
+        <th th:text="${product.productId}"></th>
 
         <th th:text="${product.stockId}"></th>
 
@@ -54,7 +56,7 @@
 
         <th th:text="${product.updateDate}"></th>
 
-        <td><a class="btn btn-outline-primary btn-sm" th:href="@{user/{id}(id=${product.productId})}">参照</a></td>
+        <td><a class="btn btn-outline-primary btn-sm" th:href="@{user/{id}(id=${product.id})}">参照</a></td>
 
         </tr>
     </tr>
