--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -35,6 +35,7 @@
     <form th:action="@{/user/edit/{id}(id=${id})}" th:method="put" th:object="${userUpdate}">
         <p>製品名：<input type="text" th:field="*{product}" /></p>
         <p>品番：<input type="text" th:field="*{pNumber}" /></p>
+        <p>種類：<input type="text" th:field="*{category}" /></p>
         <p>価格：<input type="text" th:field="*{price}" /></p>
         <input type="submit" value="更新" class="btn btn-primary" href="edit" />
     </form>
