--- a/src/main/resources/templates/user/orderManagement.html
+++ b/src/main/resources/templates/user/orderManagement.html
@@ -43,9 +43,11 @@
   <div class="row">
     <div class="form-group col-3 m-2">
       <label for="stocksId"></label>
-      <select id="stocksId" name="stocksId" class="form-select col-2" th:value="${orders.stocksId}">
+<!--      <select th:field=""-->
+      <select id="stocksId" name="stocksId" class="form-select col-2" th:object="${o}">
+      <!--      <select id="stocksId" name="stocksId" class="form-select col-2" th:value="${orders.stocksId}">-->
         <option></option>
-        <option value="1" th:selected="${orders.stocksId} == 2"></option>
+        <option value="3" th:selected="*{stocksId} == stocksId"></option>
       </select>
     </div>
   </div>
