--- a/src/main/resources/templates/user/orderManagement.html
+++ b/src/main/resources/templates/user/orderManagement.html
@@ -22,6 +22,7 @@
   </tr>
   </thead>
   <tbody>
+<!--  <form th:action="@{/user/orderEdit}" method="post" th:object="${newOrder}">-->
   <div th:object="${product}">
 
     <th th:text="*{id}"></th>
@@ -41,6 +42,7 @@
 </table>
 
 <form th:action="@{/user/orderEdit}" method="post" th:object="${newOrder}">
+  <div th:object="${product}">
   <div class="row">
     <div class="form-group col-3 m-2">
 <!--      <label for="stocksId"></label>-->
@@ -52,13 +54,14 @@
       </select>
     </div>
   </div>
+  </div>
 
 
   <label class="form-label">製品</label>
 
   <label class="form-label">在庫番号</label>
   <input class="form-control" type="text" name="stocksId">
-
+<!--  <input class="form-control" th:fragment="frag(stocksId)" th:with="stocksId=${stocksId}" ></input>-->
   <label class="control-label">数量</label>
   <input class="form-control" type="text" name="ordersNumber">
 
@@ -68,6 +71,7 @@
 </div>
 <!--  <a class="btn btn-outline-success btn-sm" th:href="@{/user/update/{id}(id=*{id})}">編集</a>-->
 </form>
+<!--</table>-->
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
