--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -2,7 +2,7 @@
 <html xmlns:th ="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
-    <title>注文失敗</title>
+    <title>update</title>
     <link href="/css/list.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/boostrap/4.3.1/css/bootstrap.min.css">
 </head>
@@ -11,7 +11,7 @@
 <script th:href="@{/webjars/bootstrap/4.4.1-1/js/boostrap.min.js}"></script>
 <div class="container">
 
-    <h1>発注に失敗しました</h1>
+    <h1>edit</h1>
     <div>
         <div>
             <a class="btn btn-link" id ="linktext" href="/product/list">一覧画面</a>
