--- a/src/main/resources/templates/product/orderManagement.html
+++ b/src/main/resources/templates/product/orderManagement.html
@@ -9,10 +9,10 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
-  <title>Hello, world!</title>
+  <title>発注</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<h1></h1>
 <table class="table">
   <thead>
   <tr>
