fix: date.sql schema.sql 修正

--- a/src/main/resources/templates/product/orderManagement.html
+++ b/src/main/resources/templates/product/orderManagement.html
@@ -43,9 +43,8 @@
   <div th:object="${product}">
   <div class="row">
     <div class="form-group col-3 m-2">
-      <label class="form-label">製品</label>
 
-      <label class="form-label">在庫番号</label>
+      <label class="form-label">製品番号</label>
       <input class="form-control" type="text" name="stocksId">
       <label class="control-label">数量</label>
       <input class="form-control" type="text" name="ordersNumber" th:value="1" max="10">
